--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/CrestedButte/160x600_CrestedButte.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/CrestedButte/160x600_CrestedButte.htm
@@ -22,7 +22,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #ac2226;
+        color: #1a1a1a;
         background-color: #fff;
       }
       .frame {
@@ -55,7 +55,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.3;">
       </div>
       <div id="frameText2" class="text GibsonSemibold"
@@ -66,7 +66,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.3;">
       </div>
       <div id="frameText3" class="text GibsonSemibold"
@@ -77,7 +77,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.3;">
       </div>
       <div id="cta" class="text GibsonSemibold"
@@ -89,8 +89,8 @@
           height: 28px;
           font-size: 12px;
           line-height: 20px;
-          letter-spacing: 0.05em;
-          border-radius: 15px;
+          /* letter-spacing: 0.05em; */
+          /* border-radius: 15px; */
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
@@ -134,7 +134,7 @@
             // ref: 'ref.png'
             logoImage: './../images/160x600_CrestedButte_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#ac2226^#791013',
+            ctaBtnColor: '#A5192E^#1a1a1a',
           },
           beforeLoad: function(data){
             data.map(function(content){
@@ -202,7 +202,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#A6192E";
+            ctx.fillStyle = "#A5192E";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
