--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/320x50/BeaverCreek/320x50_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/320x50/BeaverCreek/320x50_BeaverCreek.htm
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      .OpenSansCondensedBold {
+      /* .OpenSansCondensedBold {
         font-family: open-sans-condensed,sans-serif;
         font-weight: 700;
         font-style: normal;
@@ -17,6 +17,11 @@
       .MontserratBold{
         font-family: montserrat, sans-serif;
         font-weight: 700;
+        font-style: normal;
+      } */
+      .AlternateGothicATFDemi {
+        font-family: "alternate-gothic-atf", sans-serif;
+        font-weight: 600;
         font-style: normal;
       }
     </style>
@@ -27,8 +32,8 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #5c6f7c;
-        background-color: #fff;
+        color: #ffffff;
+        background-color: #80A1B6;
       }
       .frame {
         position: absolute;
@@ -37,8 +42,10 @@
         width:inherit;
         height:inherit;
       }
+      #cta { color: #fff; }
       #cta { background-color: !{ctaBtn}; }
       #ad:hover #cta { background-color: !{ctaBtnHover}; }
+      #ad:hover #cta { color: !{ctaBtn}; }
     </style>
   </head>
   <body>
@@ -46,43 +53,43 @@
       <div id="backgroundImage1" style="left: 45px; height: 50px;width: auto;" class="asset-left frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="left: 45px; height: 50px;width: auto;" class="asset-left frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="left: 45px; height: 50px;width: auto;" class="asset-left frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="left:-275px;background-color:rgba(255, 255, 255, 1.0);"></div>
-      <div id="bottomWhitePatch" class="frame" style="left:170px;background-color:rgba(255, 255, 255, 1.0);"></div>
+      <div id="topWhitePatch" class="frame" style="left:-275px;background-color:rgba(128, 161, 182, 1.0);"></div>
+      <div id="bottomWhitePatch" class="frame" style="left:170px;background-color:rgba(128, 161, 182, 1.0);"></div>
       <div id="productLableLogoBg" class="asset frame" data-image="productLableLogoBg"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left MontserratBold"
+      <div id="frameText1" class="text-left AlternateGothicATFDemi"
         data-text="frameText1"
         style="top: 3px;
           left: 180px;
           width: 82px;
           height: 44px;
           font-size: 10px;
-          letter-spacing: 0.05em;
+          letter-spacing: 0.025em;
           line-height: 1.1;">
       </div>
-      <div id="frameText2" class="text-left MontserratBold"
+      <div id="frameText2" class="text-left AlternateGothicATFDemi"
         data-text="frameText2"
         style="top: 3px;
           left: 180px;
           width: 82px;
           height: 44px;
           font-size: 10px;
-          letter-spacing: 0.05em;
+          letter-spacing: 0.025em;
           line-height: 1.1;">
       </div>
-      <div id="frameText3" class="text-left MontserratBold"
+      <div id="frameText3" class="text-left AlternateGothicATFDemi"
         data-text="frameText3"
         style="top: 3px;
           left: 180px;
           width: 82px;
           height: 44px;
           font-size: 10px;
-          letter-spacing: 0.05em;
+          letter-spacing: 0.025em;
           line-height: 1.1;">
       </div>
-      <div id="cta" class="text OpenSansCondensedBold"
+      <div id="cta" class="text AlternateGothicATFDemi"
         data-text="ctaText"
         data-style="padding:0 6px 0px;"
         style="top: 17px;
@@ -91,16 +98,14 @@
           height: 18px;
           font-size: 8px;
           line-height: 10px;
-          letter-spacing: 0.5px;
-          /* border-radius: 12px; */
-          color: #fff;">
+          letter-spacing: 0.025em;
+          border: 1px solid #fff;
+          /* border-radius: 12px; */">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="MontserratBold">MontserratBold</div>
-      <!-- <div class="TradeGothicNextLTProBoldCondensed">TradeGothicNextLTProBoldCondensed</div> -->
-      <div class="OpenSansCondensedBold">OpenSansCondensedBold</div>
+      <div class="AlternateGothicATFDemi">AlternateGothicATFDemi</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
@@ -138,7 +143,7 @@
             // ref: 'ref.png'
             logoImage: './../images/320x50_BeaverCreek_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#5c6f7c^#3d4952',
+            ctaBtnColor: '#80A1B6^#ffffff',
           },
           beforeLoad: function(data){
             data.map(function(content){
@@ -212,7 +217,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#5C6F7C";
+            ctx.fillStyle = "#ffffff";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
