--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/728x90/Northstar/728x90_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/728x90/Northstar/728x90_Northstar.htm
@@ -9,11 +9,16 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      @font-face {
+      /* @font-face {
           font-family: NeutraDisplayBold;
           src: url('fonts/NeutraDisplay-Bold.woff') format("woff");
       }
-      .NeutraDisplayBold { font-family: NeutraDisplayBold; }
+      .NeutraDisplayBold { font-family: NeutraDisplayBold; } */
+      .DashiellFineBold {
+        font-family: "dashiell-fine", serif;
+        font-weight: 700;
+        font-style: normal;
+      }
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
@@ -22,7 +27,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #7d1c25;
+        color: #D7941D;
         background-color: #fff;
       }
       .frame {
@@ -32,8 +37,10 @@
         width:inherit;
         height:inherit;
       }
+      #cta { color: #D7941D; }
       #cta { background-color: !{ctaBtn}; }
       #ad:hover #cta { background-color: !{ctaBtnHover}; }
+      #ad:hover #cta { color: !{ctaBtn}; }
     </style>
   </head>
   <body>
@@ -47,48 +54,48 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left NeutraDisplayBold"
+      <div id="frameText1" class="text-left DashiellFineBold"
         data-text="frameText1"
         style="top: 4px;
           left: 442px;
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.1;">
       </div>
-      <div id="frameText2" class="text-left NeutraDisplayBold"
+      <div id="frameText2" class="text-left DashiellFineBold"
         data-text="frameText2"
         style="top: 4px;
           left: 442px;
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.1;">
       </div>
-      <div id="frameText3" class="text-left NeutraDisplayBold"
+      <div id="frameText3" class="text-left DashiellFineBold"
         data-text="frameText3"
         style="top: 4px;
           left: 442px;
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.1;">
       </div>
-      <div id="cta" class="text NeutraDisplayBold"
+      <div id="cta" class="text DashiellFineBold"
         data-text="ctaText"
-        data-style="padding:2px 10px 0px;"
+        data-style="padding:0 10px 0px;"
         style="top: 29px;
           left: 623px;
           width: 94px;
           height: 30px;
           font-size: 12px;
           line-height: 20px;
-          letter-spacing: 0.05em;
-          border-radius: 4px;
-          color: #fff;">
+          /* letter-spacing: 0.05em; */
+          border-radius: 15px;
+          border: 1px solid #D7941D;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
@@ -131,7 +138,7 @@
             // ref: 'ref.png'
             logoImage: './../images/728x90_Northstar_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#7d1c25^#d7941c',
+            ctaBtnColor: '#ffffff^#D7941D',
           },
           beforeLoad: function(data){
             data.map(function(content){
@@ -211,7 +218,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#7d1b26";
+            ctx.fillStyle = "#D7941D";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
