--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/CrestedButte/970x250_CrestedButte.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/CrestedButte/970x250_CrestedButte.htm
@@ -22,7 +22,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #ac2226;
+        color: #1a1a1a;
         background-color: #fff;
       }
       .frame {
@@ -54,7 +54,7 @@
           width: 320px;
           height: 120px;
           font-size: 28px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.13;">
       </div>
       <div id="frameText2" class="text-left GibsonSemibold"
@@ -64,7 +64,7 @@
           width: 320px;
           height: 120px;
           font-size: 28px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.13;">
       </div>
       <div id="frameText3" class="text-left GibsonSemibold"
@@ -74,7 +74,7 @@
           width: 320px;
           height: 120px;
           font-size: 28px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.13;">
       </div>
       <div id="cta" class="text GibsonSemibold"
@@ -87,8 +87,8 @@
           height: 40px;
           font-size: 17px;
           line-height: 22px;
-          letter-spacing: 0.1em;
-          border-radius: 20px;
+          /* letter-spacing: 0.1em;
+          border-radius: 20px; */
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
@@ -132,7 +132,7 @@
             // ref: 'ref.png'
             logoImage: './../images/970x250_CrestedButte_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#ac2226^#791013',
+            ctaBtnColor: '#A5192E^#1a1a1a',
           },
           beforeLoad: function(data){
             data.map(function(content){
@@ -178,7 +178,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#A6192E";
+            ctx.fillStyle = "#A5192E";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
