--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/Northstar/970x250_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/Northstar/970x250_Northstar.htm
@@ -9,11 +9,16 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      @font-face {
+      /* @font-face {
           font-family: NeutraDisplayBold;
           src: url('fonts/NeutraDisplay-Bold.woff') format("woff");
       }
-      .NeutraDisplayBold { font-family: NeutraDisplayBold; }
+      .NeutraDisplayBold { font-family: NeutraDisplayBold; } */
+      .DashiellFineBold {
+        font-family: "dashiell-fine", serif;
+        font-weight: 700;
+        font-style: normal;
+      }
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
@@ -22,7 +27,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #7d1c25;
+        color: #D7941D;
         background-color: #fff;
       }
       .frame {
@@ -32,8 +37,10 @@
         width:inherit;
         height:inherit;
       }
+      #cta { color: #D7941D; }
       #cta { background-color: !{ctaBtn}; }
       #ad:hover #cta { background-color: !{ctaBtnHover}; }
+      #ad:hover #cta { color: !{ctaBtn}; }
     </style>
   </head>
   <body>
@@ -47,7 +54,7 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text NeutraDisplayBold"
+      <div id="frameText1" class="text DashiellFineBold"
         data-text="frameText1"
         data-style="text-align:center;"
         style="top: 58px;
@@ -55,10 +62,10 @@
           width: 320px;
           height: 130px;
           font-size: 30px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.13;">
       </div>
-      <div id="frameText2" class="text NeutraDisplayBold"
+      <div id="frameText2" class="text DashiellFineBold"
         data-text="frameText2"
         data-style="text-align:center;"
         style="top: 58px;
@@ -66,10 +73,10 @@
           width: 320px;
           height: 130px;
           font-size: 30px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.13;">
       </div>
-      <div id="frameText3" class="text NeutraDisplayBold"
+      <div id="frameText3" class="text DashiellFineBold"
         data-text="frameText3"
         data-style="text-align:center;"
         style="top: 58px;
@@ -77,12 +84,12 @@
           width: 320px;
           height: 130px;
           font-size: 30px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.13;">
       </div>
-      <div id="cta" class="text NeutraDisplayBold"
+      <div id="cta" class="text DashiellFineBold"
         data-text="ctaText"
-        data-style="padding:4px 20px 0px;"
+        data-style="padding:0 20px 0px;"
         style="top: 193px;
           left: 705px;
           min-width: 156px;
@@ -90,9 +97,9 @@
           height: 40px;
           font-size: 16px;
           line-height: 22px;
-          letter-spacing: 0.05em;
-          border-radius: 4px;
-          color: #fff;">
+          /* letter-spacing: 0.05em; */
+          border-radius: 20px;
+          border: 1px solid #D7941D;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
@@ -135,7 +142,7 @@
             // ref: 'ref.png'
             logoImage: './../images/970x250_Northstar_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#7d1c25^#d7941c',
+            ctaBtnColor: '#ffffff^#D7941D',
           },
           beforeLoad: function(data){
             data.map(function(content){
@@ -182,7 +189,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#7d1b26";
+            ctx.fillStyle = "#D7941D";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
