--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/MultiResort/320x50_MultiResort.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/MultiResort/320x50_MultiResort.htm
@@ -161,7 +161,7 @@
                 cta.style.height = "16px";
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
-                 // frameText[i].style.width = '144px';
+                 frameText[i].style.width = '144px';
                  frameText[i].style.height = '24px';
                 }
               } else if(layout == 'multipleimagesoffer') {
