--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/MultiResort/728x90_MultiResort.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/MultiResort/728x90_MultiResort.htm
@@ -161,7 +161,7 @@
                 cta.style.height = "27px";
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
-                 // frameText[i].style.width = '275px';
+                 frameText[i].style.width = '275px';
                  frameText[i].style.height = '46px';
                  frameText[i].style.fontSize = '18.2px';
                  frameText[i].style.lineHeight = '1.2';
